# haskell-2020

.github/workflows/: AutoPublishToStudents.yml  PublishOnStudents.yml
docs/: README.md  about.md  deleteme.md  how-to-publish-to-students.md  private-branches.md
examples/Chat/chat-andres/: chat.cabal  hie.yaml
examples/Chat/chat-andres/app/: Main.hs
examples/Chat/chat-andres/src/: Chat.hs
examples/Chat/chat-lars/: chat.cabal
examples/Chat/chat-lars/app/: Main.hs
examples/Chat/chat-lars/src/: Chat.hs
examples/Rand/: Rand.hs  rand.cabal
examples/TailRecursion/: tail-recursion.cabal
examples/TailRecursion/src/: TailRecursion.hs
examples/benchmark/: bench.html  benchmark.cabal  benchmark.hs
examples/dsls/: Combined.hs  DSLs.hs  DSLs2.hs  Examples.hs  Marlowe.hs  Marlowe0.hs  Marlowe1.hs  Prop.hs  Sim.hs  Static.hs  dsls.cabal  hie.yaml
examples/free-example/: FreeExample.hs  free-example.cabal
examples/little-robot/: hie.yaml  little-robot.cabal
examples/little-robot/app/: client.hs  server.hs
examples/little-robot/src/: Client.hs  Remote.hs  Robot.hs
examples/marlowe-lh/: LH.hs  Marlowe.hs  marlowe-lh.cabal
examples/monad-examples/: MonadExamples.hs  monad-examples.cabal
examples/nested/: Setup.hs  hie.yaml  nested.cabal
examples/nested/src/: Nested.hs
examples/optics-examples/: Setup.hs  hie.yaml  optics-examples.cabal
examples/optics-examples/src/: Examples.hs  Optics.hs
examples/plutus/: hie.yaml  plutus.cabal
examples/plutus/src/: Plutus.hs
examples/plutus/src/Plutus/: Examples.hs  StateMachine.hs  Value.hs
examples/servant-demo/: add-user.sh  alice.json  bob.json  charlie.json  delete-user.sh  doc.md  servant-demo.cabal  user.db
examples/servant-demo/app/: hello.hs  users.hs
examples/servant-demo/src/: Hello.hs  Phantom.hs  PhantomPW.hs  Proxies.hs  Users.hs  UsersDB.hs
examples/servant-demo/static/: app.js  index.html  users.js
examples/template-haskell/: Power.hs  Quasi.hs  SPower.hs  UseQuasi.hs  power-performance-test.cabal
lectures/category theory/: Cat.hs
solutions/02-introduction/: README.md  hie.yaml  introduction.cabal
solutions/02-introduction/src/: Chains.hs
solutions/02-introduction/test/: Spec.hs
solutions/03-datatypes/: README.md  Setup.hs  datatypes.cabal  hie.yaml
solutions/03-datatypes/src/: Datatypes.hs  Tables.hs  Transactions.hs
solutions/03-datatypes/test/: DatatypesSpec.hs  TablesSpec.hs  TransactionsSpec.hs
solutions/05-higher-order/: README.md  Setup.hs  hie.yaml  higher-order.cabal
solutions/05-higher-order/src/: HigherOrder.hs
solutions/05-higher-order/test/: HigherOrderSpec.hs
solutions/07-io/: README.md  Setup.hs  hie.yaml  io.cabal
solutions/07-io/app/: readLnMaybe.hs  sumMany1.hs  sumMany2.hs  sumTwo.hs
solutions/07-io/src/: IO.hs
solutions/07-io/test/: IOSpec.hs
solutions/T1/: Setup.hs  t1.cabal
solutions/T1/src/: T1.hs
solutions/T2/: README.md  Setup.hs  hie.yaml  t2.cabal
solutions/T2/src/: T2.hs
solutions/T3/: .gitignore  README.md  Setup.hs  hie.yaml  t3.cabal
solutions/T3/src/: Parser.hs  T3.hs
solutions/T4/: README.md  Setup.hs  hie.yaml  t4.cabal
solutions/T4/src/: Optics.hs  T4.hs
solutions/p1/: README.md  hie.yaml  p1.cabal
solutions/p1/app/: p2p.hs
solutions/p1/src/: P2P.hs
solutions/p1/src/P2P/: Config.hs  Core.hs  Discovery.hs  Handle.hs  Limit.hs  PeerHandling.hs  Server.hs  Status.hs  TxGenerator.hs
solutions/w1/: README.md  Setup.hs  hie.yaml  w01.cabal
solutions/w1/app/: W0106.hs
solutions/w1/src/: W0101.hs  W0102.hs  W0103.hs  W0104.hs  W0107.hs
solutions/w1/test/: W0101Spec.hs  W0102Spec.hs  W0103Spec.hs  W0104Spec.hs  W0107Spec.hs
solutions/w2/: README.md  Setup.hs  hie.yaml  w02.cabal
solutions/w2/app/: W020201.hs  W020202.hs  W020203.hs
solutions/w2/src/: W0201.hs  W0202.hs  W0203.hs  W0204.hs
solutions/w3/: README.md  Setup.hs  fact5.stack  hie.yaml  w03.cabal
solutions/w3/src/: W0301.hs  W0302.hs  W0303.hs  W0304.hs
solutions/w4/: README.md  Setup.hs  bench.html  bench.sh  hie.yaml  w04.cabal
solutions/w4/app/: w040301.hs  w040302.hs  w040303.hs
solutions/w4/benchmark/: w0402.hs
solutions/w4/src/: W0401.hs  W0403.hs
solutions/w5/: README.md  Setup.hs  hie.yaml  w05.cabal
solutions/w5/src/: Optics.hs  W0501.hs  W0502.hs  W0503.hs  W0504.hs
solutions/w6/: .gitignore  README.md  Setup.hs  hie.yaml  w06.cabal
solutions/w6/src/: W0601.hs  W0602.hs  W0603.hs
sources/code/22-template-haskell/: hie.yaml
