cabal-version:       >=1.10
name:                rand
version:             0.1.0.0
author:              Lars Brünjes
maintainer:          brunjlar@gmail.com
build-type:          Simple

library
  exposed-modules:     Rand
  build-depends:       base >=4.14 && <4.15
                     , containers
                     , mtl
                     , random
  default-language:    Haskell2010
  ghc-options:         -Wall
