cabal-version:       >=1.10
name:                benchmark
version:             0.1.0.0
author:              Lars Brünjes
maintainer:          brunjlar@gmail.com
build-type:          Simple

benchmark benchmark
  type:                exitcode-stdio-1.0
  main-is:             benchmark.hs
  build-depends:       base == 4.14.0.0
                     , criterion
                     , random
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
