cabal-version:       >=1.10
name:                dsls
version:             0.1.0.0
author:              Andres Loeh
maintainer:          andres@well-typed.com
build-type:          Simple

library
  exposed-modules:     DSLs, DSLs2, Prop, Combined, Marlowe0, Marlowe1, Marlowe, Sim, Static
  build-depends:       base >=4.14 && <4.15, containers, mtl, random
  default-language:    Haskell2010
  ghc-options:         -Wall
