cabal-version:       >=1.10
name:                marlowe-lh
version:             0.1.0.0
author:              Andres Loeh
maintainer:          andres@well-typed.com
build-type:          Simple

library
  exposed-modules:     LH, Marlowe
  build-depends:       liquidhaskell, liquid-base >=4.14 && <4.15, liquid-containers
  default-language:    Haskell2010
  ghc-options:         -Wall -fplugin=LiquidHaskell
