cabal-version:       >=1.10
name:                monad-examples
version:             0.1.0.0
author:              Lars Brünjes
maintainer:          brunjlar@gmail.com
build-type:          Simple

library
  exposed-modules:     MonadExamples
  build-depends:       base >=4.14 && <4.15
                     , free
                     , mtl
  default-language:    Haskell2010
