cabal-version:       >=1.10
name:                plutus
version:             0.1.0.0
author:              Lars Brünjes
maintainer:          brunjlar@gmail.com
build-type:          Simple

library
  exposed-modules:     Plutus
                     , Plutus.Examples
                     , Plutus.Value
  build-depends:       base >=4.14 && <4.15
                     , containers
                     , mtl
                     , optics
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
