cabal-version: 2.0
name: power-performance-test
version: 0.1
build-type: Simple

executable power-performance-test
  hs-source-dirs: .
  default-language: Haskell2010
  main-is: Power.hs
  other-modules: SPower, Quasi, UseQuasi
  build-depends: base, gauge, criterion, template-haskell, shakespeare, blaze-html, blaze-markup
