name:                introduction
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chains
  build-depends:       base >= 4.14.0.0
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite introduction-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:       base >= 4.14.0.0
                     , hspec
                     , introduction
  default-language:    Haskell2010
  ghc-options: -Wall
