name:                datatypes
version:             0.1.0.0
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6 && <1.1

library
  hs-source-dirs:      src
  exposed-modules:     Datatypes
                     , Tables
                     , Transactions
  build-depends:       base == 4.14.0.0
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite datatypes-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  other-modules:       DatatypesSpec
                     , TablesSpec
                     , TransactionsSpec
  build-depends:       base == 4.14.0.0
                     , containers
                     , hspec
                     , datatypes
                     , QuickCheck
  build-tool-depends:  hspec-discover:hspec-discover
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite datatypes-doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , base-compat       >=0.10.5 && <0.12
    , doctest           >=0.15   && <0.17
    , datatypes
    , template-haskell
  ghc-options:      -Wall -threaded
  hs-source-dirs:   doctest
  default-language: Haskell2010
