name:                higher-order
version:             0.1
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6 && <1.1

library
  hs-source-dirs:      src
  exposed-modules:     HigherOrder
  build-depends:       base == 4.14.0.0
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite higher-order-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  other-modules:       HigherOrderSpec
  build-depends:       base == 4.14.0.0
                     , hspec
                     , higher-order
                     , mtl
                     , QuickCheck
  build-tool-depends:  hspec-discover:hspec-discover
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite higher-order-doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , base-compat       >=0.10.5 && <0.12
    , doctest           >=0.15   && <0.17
    , template-haskell
  ghc-options:      -Wall -threaded
  hs-source-dirs:   doctest
  default-language: Haskell2010
