name:                io
version:             0.1
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6 && <1.1

library
  hs-source-dirs:      src
  exposed-modules:     IO
  build-depends:       base >= 4.14.0.0
                     , bytestring
                     , containers
                     , dns == 3.0.4
                     , iproute
                     , network == 2.6.3.6
                     , random
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite io-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  other-modules:       IOSpec
  build-depends:       async
                     , base == 4.14.0.0
                     , containers
                     , hspec
                     , io
                     , process
                     , QuickCheck
                     , statistics
                     , time
  build-tool-depends:  hspec-discover:hspec-discover
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite io-doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , base-compat       >=0.10.5 && <0.12
    , doctest           >=0.15   && <0.17
    , template-haskell
  ghc-options:      -Wall -threaded
  hs-source-dirs:   doctest
  default-language: Haskell2010

executable readLnMaybe
  hs-source-dirs:      app
  main-is:             readLnMaybe.hs
  build-depends:       base == 4.14.0.0
                     , io
  ghc-options:         -Wall
  default-language:    Haskell2010

executable sumTwo
  hs-source-dirs:      app
  main-is:             sumTwo.hs
  build-depends:       base == 4.14.0.0
                     , io
  ghc-options:         -Wall
  default-language:    Haskell2010

executable sumMany1
  hs-source-dirs:      app
  main-is:             sumMany1.hs
  build-depends:       base == 4.14.0.0
                     , io
  ghc-options:         -Wall
  default-language:    Haskell2010

executable sumMany2
  hs-source-dirs:      app
  main-is:             sumMany2.hs
  build-depends:       base == 4.14.0.0
                     , io
  ghc-options:         -Wall
  default-language:    Haskell2010
