name: p1
version: 0.1
build-type: Simple
cabal-version: >= 1.10
extra-source-files: p1.pdf

library
  hs-source-dirs: src
  exposed-modules:
    P2P,
    P2P.Config,
    P2P.Core,
    P2P.Discovery,
    P2P.Handle,
    P2P.Limit
    P2P.PeerHandling,
    P2P.Server,
    P2P.Status,
    P2P.TxGenerator
  build-depends:
    base == 4.14.0.0,
    async,
    containers,
    mtl,
    network == 2.6.3.6,
    network-info,
    optparse-generic,
    random,
    stm
  default-language: Haskell2010
  ghc-options: -Wall

executable p2p
  hs-source-dirs:      app
  main-is:             p2p.hs
  build-depends:       base == 4.14.0.0
                     , p1
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
