name:                w01
version:             0.1
build-type:          Custom
cabal-version:       >= 1.10
extra-source-files:  README.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6 && <1.1

library
  hs-source-dirs:      src
  Exposed-Modules:     W0101
                     , W0102
                     , W0103
                     , W0104
                     , W0107
  build-depends:       base == 4.14.0.0
                     , array
                     , containers
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall

executable sha256sum
  hs-source-dirs:      app
  main-is:             W0106.hs
  build-depends:       base == 4.14.0.0
                     , bytestring
                     , cryptonite
                     , directory
  ghc-options:         -Wall
  default-language:    Haskell2010

test-Suite w01-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  other-modules:       W0101Spec
                     , W0102Spec
                     , W0103Spec
                     , W0104Spec
                     , W0107Spec
  build-depends:       base == 4.14.0.0
                     , containers
                     , hspec
                     , QuickCheck
                     , w01
  build-tool-depends:  hspec-discover:hspec-discover
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite w01-doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       base
                     , base-compat      >= 0.10.5 && < 0.12
                     , doctest          >= 0.15   && < 0.17
                     , template-haskell
  ghc-options:         -Wall -threaded
  hs-source-dirs:      doctest
  default-language:    Haskell2010
