name:                w02
version:             0.1
build-type:          Custom
cabal-version:       >= 1.10
extra-source-files:  README.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6 && <1.1

library
  hs-source-dirs:       src
  Exposed-Modules:      W0201
                      , W0202
                      , W0203
                      , W0204
  build-depends:        base == 4.14.0.0
                      , containers
                      , random
                      , stm
  default-language:     Haskell2010
  ghc-options:          -Wall

executable w020201
  hs-source-dirs:      app
  main-is:             W020201.hs
  build-depends:       base >= 4.7 && < 5
                     , w02
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable w020202
  hs-source-dirs:      app
  main-is:             W020202.hs
  build-depends:       base >= 4.7 && < 5
                     , w02
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable w020203
  hs-source-dirs:      app
  main-is:             W020203.hs
  build-depends:       base >= 4.7 && < 5
                     , w02
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite w02-doctests
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:
                        base
                      , base-compat      >= 0.10.5 && < 0.12
                      , doctest          >= 0.15   && < 0.17
                      , template-haskell
  ghc-options:      -Wall -threaded
  hs-source-dirs:   doctest
  default-language: Haskell2010
