name:                w04
version:             0.1
build-type:          Custom
cabal-version:       >= 1.10
extra-source-files:  README.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >=1.0.6 && <1.1

library
  hs-source-dirs:       src
  Exposed-Modules:      W0401
                      , W0403
  build-depends:        base == 4.14.0.0
                      , base16-bytestring
                      , base58-bytestring
                      , bytestring
                      , cryptonite
                      , deepseq
                      , memory
                      , mtl
                      , optparse-applicative
  default-language:     Haskell2010
  ghc-options:          -Wall

benchmark w0402
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             w0402.hs
  build-depends:       base == 4.14.0.0
                     , criterion
                     , w04
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable w040301
  hs-source-dirs:      app
  main-is:             w040301.hs
  build-depends:       base == 4.14.0.0
                     , w04
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable w040302
  hs-source-dirs:      app
  main-is:             w040302.hs
  build-depends:       base == 4.14.0.0
                     , w04
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

executable w040303
  hs-source-dirs:      app
  main-is:             w040303.hs
  build-depends:       base == 4.14.0.0
                     , w04
  ghc-options:         -Wall -O3
  default-language:    Haskell2010

test-suite w04-doctests
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:
                        base
                      , base-compat      >= 0.10.5 && < 0.12
                      , doctest          >= 0.15   && < 0.17
                      , template-haskell
  ghc-options:      -Wall -threaded
  hs-source-dirs:   doctest
  default-language: Haskell2010
