name: chat
version: 0.1
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base == 4.14.0.0,
    async,
    containers,
    network == 2.6.3.2,
    stm
  exposed-modules:
    Chat

executable chat
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base == 4.14.0.0
                     , chat
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
