cabal-version:       2.4
name:                chat
version:             0.1.0.0
author:              Lars Brünjes
maintainer:          brunjlar@gmail.com

library
  exposed-modules:     Chat
  build-depends:       base == 4.14.0.0
                     , async
                     , containers
                     , network == 2.6.3.2
                     , stm
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable chat
  main-is:             Main.hs
  build-depends:       base == 4.14.0.0
                     , chat
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
